if(BUILD_UTILITIES)
    add_subdirectory(atsa)
    add_subdirectory(csanalyze)
    add_subdirectory(cvanal)
    add_subdirectory(dnoise)
    add_subdirectory(envext)
    add_subdirectory(extractor)
    add_subdirectory(het_export)
    add_subdirectory(het_import)
    add_subdirectory(hetro)
    add_subdirectory(lpanal)
    add_subdirectory(lpc_export)
    add_subdirectory(mixer-bin)
    add_subdirectory(pv_export)
    add_subdirectory(pv_import)
    add_subdirectory(pvanal)
    add_subdirectory(pvlook)
    add_subdirectory(scale)
    add_subdirectory(sdif2ad)
    add_subdirectory(sndinfo)
    add_subdirectory(src_conv)
    add_subdirectory(srconv)
endif()