option(BUILD_CSOUND_COMMAND "Build the Csound command" ON)

if(BUILD_UTILITIES)
    add_subdirectory(atsa)
    add_subdirectory(cs)
    add_subdirectory(csanalyze)
    add_subdirectory(csb64enc)
    add_subdirectory(cvanal)
    add_subdirectory(dnoise)
    add_subdirectory(envext)
    add_subdirectory(extract)
    add_subdirectory(extractor)
    add_subdirectory(het_export)
    add_subdirectory(het_import)
    add_subdirectory(hetro)
    add_subdirectory(lpanal)
    add_subdirectory(lpc_export)
    add_subdirectory(makecsd)
    add_subdirectory(mixer-bin)
    add_subdirectory(pv_export)
    add_subdirectory(pv_import)
    add_subdirectory(pvanal)
    add_subdirectory(pvlook)
    add_subdirectory(scale)
    add_subdirectory(scot)
    add_subdirectory(scsort)
    add_subdirectory(sdif2ad)
    add_subdirectory(sndinfo)
    add_subdirectory(src_conv)
    add_subdirectory(srconv)
endif()

if (BUILD_CSOUND_COMMAND)
    if(CMAKE_SYSTEM_NAME MATCHES "Linux")
        list(APPEND CSOUNDLIB -lpthread)
    endif()
    add_subdirectory(csdebugger)
    add_subdirectory(csound-bin)
endif()

add_subdirectory(csbeats)