option(USE_PORTMIDI "Build the PortMIDI I/O module" ON)

if(USE_PORTMIDI)
    if(USE_VCPKG)
        find_package(PortMidi CONFIG REQUIRED)
    else()
        find_package(PORTMIDI)
    endif()
endif()

if(PORTMIDI_FOUND OR USE_VCPKG)
    if(USE_VCPKG)
        find_package(Threads REQUIRED)
        make_plugin(pmidi pmidi.c)
        target_link_libraries(pmidi PRIVATE PortMidi::portmidi)
    else()
        make_plugin(pmidi pmidi.c)
        target_include_directories(pmidi PRIVATE ${PORTMIDI_INCLUDE_DIRS})
        target_link_libraries(pmidi PRIVATE ${PORTMIDI_LIBRARIES})
        if(WIN32)
            target_link_libraries(pmidi PRIVATE ${CSOUND_WINDOWS_LIBRARIES})
            elseif(LINUX AND ALSA_LIBRARY)
            target_link_libraries(pmidi PRIVATE ${ALSA_LIBRARY})
        endif()
    endif()
#else()
 message(STATUS "Not building Portmidi backend...")
endif()