option(USE_PORTAUDIO "Build the PortAudio I/O module" ON)

if(USE_PORTAUDIO)
    if (USE_VCPKG)
        find_package(portaudio CONFIG REQUIRED)
    else()
        find_package(PORTAUDIO)
    endif()
endif()

if(PORTAUDIO_FOUND OR USE_VCPKG)
    message(STATUS "Building rtpa module.")
    make_plugin(rtpa rtpa.c)
    if(USE_VCPKG)
        target_link_libraries(rtpa PRIVATE portaudio_static)
    else()
        target_include_directories(rtpa PRIVATE ${PORTAUDIO_INCLUDE_DIRS})
        target_link_libraries(rtpa PRIVATE ${PORTAUDIO_LIBRARIES})
    endif()
else()
  message(STATUS "Not building Portaudio backend...")
  message(STATUS "Portaudio v19 Found: ${PORTAUDIO_V19}.")
endif()