add_subdirectory(afilters)
add_subdirectory(arrays)
add_subdirectory(babo)
add_subdirectory(bbcut)
add_subdirectory(bilbar)
add_subdirectory(biquad)
add_subdirectory(clfilt)
add_subdirectory(compress)
add_subdirectory(crossfm)
add_subdirectory(dam)
add_subdirectory(emugens)
add_subdirectory(entry1)
add_subdirectory(eqfil)
add_subdirectory(flanger)
add_subdirectory(follow)
add_subdirectory(fout)
add_subdirectory(ftgen)
add_subdirectory(gab)
add_subdirectory(gendy)
add_subdirectory(grain)
add_subdirectory(grain4)
add_subdirectory(harmon)
add_subdirectory(hrtfearly)
add_subdirectory(hrtferX)
add_subdirectory(hrtfopcodes)
add_subdirectory(hrtfreverb)
add_subdirectory(hvs)
add_subdirectory(ifd)
add_subdirectory(locsig)
add_subdirectory(loscilx)
add_subdirectory(lowpassr)
add_subdirectory(midiops2)
add_subdirectory(midiops3)
add_subdirectory(modal4)
add_subdirectory(mp3in)
add_subdirectory(newfils)
add_subdirectory(newgabopc)
add_subdirectory(nlfilt)
add_subdirectory(oscbnk)
add_subdirectory(pan2)
add_subdirectory(partials)
add_subdirectory(partikkel)
add_subdirectory(paulstretch)
add_subdirectory(phisem)
add_subdirectory(physmod)
add_subdirectory(pinker)
add_subdirectory(pitchtrack)
add_subdirectory(pluck)
add_subdirectory(psynth)
add_subdirectory(pvlock)
add_subdirectory(pvoc)
add_subdirectory(pvsband)
add_subdirectory(pvsbasic)
add_subdirectory(pvsbuffer)
add_subdirectory(pvscent)
add_subdirectory(pvsdemix)
add_subdirectory(repluck)
add_subdirectory(reverbsc)
add_subdirectory(sc_noise)
add_subdirectory(scanhammer)
add_subdirectory(scansynx)
add_subdirectory(scugens)
add_subdirectory(sequencer)
add_subdirectory(sfont)
add_subdirectory(shape)
add_subdirectory(sliderTable)
add_subdirectory(sndloop)
add_subdirectory(sndwarp)
add_subdirectory(sockrecv)
add_subdirectory(socksend)
add_subdirectory(space)
add_subdirectory(spat3d)
add_subdirectory(spectra)
add_subdirectory(squinewave)
add_subdirectory(syncgrain)
add_subdirectory(tabaudio)
add_subdirectory(tabmorph)
add_subdirectory(ugens7)
add_subdirectory(ugens9)
add_subdirectory(ugensa)
add_subdirectory(uggab)
add_subdirectory(ugmoss)
add_subdirectory(ugnorman)
add_subdirectory(ugsc)
add_subdirectory(vbap)
add_subdirectory(vectorial)
add_subdirectory(vosim)
add_subdirectory(wave-terrain)
add_subdirectory(wpfilters)
